@@ -1,12 +1,0 @@
-
-<tr class="db_list_normal">
-	<td class="col-icon">
-		<bu:spriteIconForRecord table="static_info_countries" object="{country}" />
-	</td>
-	<td>
-		<b>{country.shortNameLocal}</b>
-	</td>
-	<td>{country.shortNameEn}</td>
-	<td>
-	</td>
-</tr>
